2007-11-30  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update gpgex.

2007-11-29  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update pinentry.
	* configure.ac: Merge duplicated pinentry entries.
	Make gnupg2 dependent on pinentry.

2007-11-27  Marcus Brinkmann  <marcus@g10code.de>

	* src/dirmngr.conf: New file.
	* src/inst-dirmngr.nsi: Install our version of dirmngr.conf.
	Remove /nonfatal from configuration files.

2007-11-27  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update gnupg.

2007-11-27  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update kleopatra.

2007-11-26  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update dirmngr and gpgex.

	* src/inst-dirmngr.nsi: No longer create the cache directory.
	* src/inst-sections.pl: Correct upper/lowercase of WinPT link (for
	the msi converter).
	* src/make-msi.pl: Improve handling of shortcuts.
	* src/make-msi.guids: Update.
	* src/make-msi.bat: Remove duplicate entries.

2007-11-26  Werner Koch  <wk@g10code.com>

	* src/inst-kleopatra.nsi: Install libkmime.dll.  Take libkleo from
	bin/.
	* src/uninst-kleopatra.nsi: Uninstall libkmime.dll.

2007-11-26  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-dirmngr.nsi: No longer create the cache directory.

	* src/make-msi.pl: 

	* packages/packages.current: Fix entry for kdelibs source.

	* src/make-msi.pl (dump_all): Start dirmngr service.
	* src/README-msi.txt: Add todo items.

	* src/Makefile.am (msi, gpg4win-$(VERSION).wix,
	(gpg4win-light-$(VERSION).wix): New targets.
	* src/make-msi.pl: Rewritten.
	* src/make-msi.guids: Include missing files.
	* src/inst-gpg4win.nsi: Give section an identifier.
	* src/README-msi.txt: Update.
	* src/gpg4win.nsi: Do not include pinentry in the light installer.
	* doc/README.de.txt, doc/README.en.txt: Document MSI package.
	* src/make-msi.bat: Support other languages and light installer.
